# TurtlePet

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
demo/: 1598.dic  1598.lm  1598.log_pronounce  1598.sent  1598.vocab
launch/: Untitled Document~  classDemo.launch~  guidebot.launch~  turtlepet.launch  turtlepet.launch~
scripts/: ObstacleDetector.py~  VoiceCommand.py  VoiceCommand.py~  VoiceCommands.py~  VoiceTeleop.py~  follower.py  follower.py~  turtlepet.py  turtlepet.py~  wander.py  wander.py~
src/scripts/: testing.py
